# monogon

./: .bazelignore  .bazelproject  .bazelrc  .bazelrc.ci  .bazelrc.sandboxroot  .git-ignore-revs  .gitignore  BUILD  BUILD.bazel  CODING_STANDARDS.md  MODULE.bazel  README.md  SETUP.md  WORKSPACE  go.MODULE.bazel  go.mod  go.sum  nogo_config.json  rust.MODULE.bazel  shell.nix  third_party.MODULE.bazel
cloud/: BUILD.bazel  README.md
cloud/agent/: BUILD.bazel  agent.go  hwreport.go  hwreport_test.go  install.go  main.go
cloud/agent/api/: BUILD.bazel  agent.proto  hwreport.proto  takeover.proto
cloud/agent/e2e/: BUILD.bazel  main_test.go
cloud/agent/takeover/: BUILD.bazel  takeover.go
cloud/agent/testdata/: cpuinfo_amd_7402p.txt  cpuinfo_intel_12900k.txt  cpuinfo_qemu_virtual.txt
cloud/api/: BUILD.bazel  gomod-generated-placeholder.go  iam.proto
cloud/apigw/: BUILD.bazel  main.go
cloud/apigw/model/: BUILD.bazel  queries.sql
cloud/apigw/server/: BUILD.bazel  server.go  server_test.go
cloud/bmaas/: DEPLOYING.md
cloud/bmaas/bmdb/: BUILD.bazel  backoff_test.go  bmdb.go  connection.go  migrations_test.go  queries_test.go  reflection_test.go  sessions.go  sessions_test.go
cloud/bmaas/scruffy/: BUILD.bazel  bmdb_stats.go  bmdb_stats_test.go  hw_stats.go  hw_stats_test.go  labels.go  server.go
cloud/bmaas/server/: BUILD.bazel  README.md  agent_callback_service.go  agent_callback_service_test.go  server.go
cloud/equinix/cli/: BUILD.bazel  cmd_delete.go  cmd_list.go  cmd_move.go  cmd_reboot.go  cmd_yoink.go  main.go
cloud/equinix/wrapngo/: BUILD.bazel  duct_tape.go  metrics.go  wrapn.go  wrapngo_live_test.go
cloud/lib/component/: BUILD.bazel  component.go  crdb.go  devcerts.go
cloud/lib/sinbin/: BUILD.bazel  sinbin.go  sinbin_test.go
cloud/shepherd/: BUILD.bazel  shepherd.go
cloud/shepherd/manager/: BUILD.bazel  README.md  control_loop.go  fake_ssh_client.go  initializer.go  initializer_test.go  manager.go  provider_test.go  provisioner.go  provisioner_test.go  recoverer.go  ssh_client.go  ssh_key_signer.go
cloud/shepherd/mini/: BUILD.bazel  main.go  provider.go  ssh.go
cloud/takeover/: BUILD.bazel  takeover.go
cloud/takeover/e2e/: BUILD.bazel  main_test.go
cmd/init/: BUILD.bazel  main.go
go/clitable/: BUILD.bazel  table.go  table_test.go
go/qcow2/: BUILD.bazel  qcow2.go  qcow2_test.go
intellij/localconfig/: BUILD.bazel  localconfig.go
intellij/localconfig/data/: watcherTasks.xml
intellij/localconfig/watchers/: BUILD.bazel  filewatchers.go
metropolis/: BUILD.bazel  README.md
metropolis/cli/dbg/: BUILD.bazel  main.go
metropolis/cli/flagdefs/: BUILD.bazel  flagdefs.go
metropolis/cli/metroctl/: BUILD.bazel  approve.go  cmd_certs.go  cmd_cluster.go  cmd_cluster_configure.go  cmd_cluster_takeownership.go  cmd_install.go  cmd_install_ssh.go  cmd_install_usb.go  cmd_k8s_configure.go  cmd_k8scredplugin.go  cmd_node.go  cmd_node_approve.go  cmd_node_logs.go  cmd_node_metrics.go  cmd_node_set.go  cmd_takeownership.go  credentials.go  defs.bzl  describe.go  format.go  install.go  k8scredplugin.go  list.go  main.go  node.go  rpc.go  set.go  table.go  table_node.go  table_test.go  takeownership.go
metropolis/cli/takeover/: BUILD.bazel  boot.go  install.go  main.go  takeover.go
metropolis/handbook/: BUILD.bazel  README.md  book.toml  defs.bzl
metropolis/handbook/src/: SUMMARY.md  ch01-00-metropolis-organization.md  ch02-00-local-demo-cluster.md  ch03-00-cluster-architecture.md  ch03-05-cluster-api.md  ch05-01-checking-out-and-building.md  introduction-00-title.md  introduction-01-how-to-use.md
metropolis/installer/: BUILD.bazel  log.go  main.go
metropolis/installer/install/: BUILD.bazel  install.go
metropolis/installer/test/: BUILD.bazel  main.go  run_test.go
metropolis/node/: BUILD.bazel  erofs-layout.fsspec  ids.go  labels.go  labels_test.go  net_ips.go  net_protocols.go  passwd  ports.go  tools.go  validation.go  validation_test.go  version.go
metropolis/node/abloader/: BUILD.bazel  main.rs
metropolis/node/bios_bootcode/: BUILD.bazel  README.md  boot.asm
metropolis/node/core/: BUILD.bazel  debug_service.go  debug_service_disabled.go  debug_service_enabled.go  delve_disabled.go  delve_enabled.go  main.go  mounts.go  nodeparams.go  panichandler.go  pstore.go  switchroot.go  sysctl.go
metropolis/node/installer/: BUILD.bazel  main.go
metropolis/node/kubernetes/: BUILD.bazel  apiproxy.go  apiserver.go  controller-manager.go  csi.go  feature_gates.go  feature_gates_test.go  kubelet.go  labelmaker.go  provisioner.go  scheduler.go  service.go  service_controller.go  service_worker.go
metropolis/node/minit/: BUILD.bazel  main.c
metropolis/node/tools/: tools.go
metropolis/pkg/blkio/: BUILD.bazel
metropolis/pkg/blockdev/: BUILD.bazel  blockdev.go  blockdev_darwin.go  (+1 more)
metropolis/proto/: BUILD  BUILD.bazel
metropolis/version/: BUILD.bazel  gomod-generated-placeholder.go
net/dump/: BUILD.bazel  hwaddr_compat.go  netdump.go
net/proto/: BUILD.bazel  net.proto
osbase/blockdev/: BUILD.bazel  blockdev.go  blockdev_darwin.go  blockdev_linux.go  blockdev_linux_test.go  blockdev_test.go  blockdev_windows.go  memory.go
osbase/bootparam/: BUILD.bazel  bootparam.go  bootparam_test.go  params.go  params_test.go
osbase/bringup/: BUILD.bazel  bringup.go  panichandler.go  pstore.go
osbase/devicemapper/: BUILD.bazel  ctype.go  devicemapper.go
osbase/efivarfs/: BUILD.bazel  boot.go  boot_test.go  devicepath.go  devicepath_test.go  efivarfs.go  osindications.go  variables.go
osbase/erofs/: BUILD.bazel  compression.go  compression_test.go  defs.go  defs_test.go  doc.md  erofs.go  erofs_test.go  inode_types.go  uncompressed_inode_writer.go
osbase/fat32/: BUILD.bazel  dos83.go  fat32.go  fsck_test.go  linux_test.go  structs.go  structs_test.go  utils.go
osbase/fsquota/: BUILD.bazel  fsquota.go  fsquota_test.go
osbase/gpt/: BUILD.bazel  gpt.go  gpt_test.go  linux_test.go  mbr.go  mbr_test.go  structs_test.go
osbase/kmod/: BUILD.bazel  manager.go  manager_test.go  meta.go  modinfo.go  radix.go  radix_test.go  syscall.go
(+1203 files in other folders)
