test_suite(
    name = "launch",
    tags = ["manual"],
    tests = [
        "//metropolis/test/launch/cli/launch",
    ],
)

test_suite(
    name = "launch-cluster",
    tags = ["manual"],
    tests = [
        "//metropolis/test/launch/cli/launch-cluster",
    ],
)

alias(
    name = "metroctl",
    actual = "//metropolis/cli/metroctl:metroctl",
)
